# patch-cms

./: Cargo.toml  README.md  ROADMAP.md
.claude/: settings.local.json
crates/cms-core/: Cargo.toml
crates/cms-core/src/: error.rs  filespec.rs  filesystem.rs  lib.rs  minidisk.rs
crates/xedit-core/: Cargo.toml
crates/xedit-core/src/: buffer.rs  command.rs  editor.rs  error.rs  lib.rs  macro_engine.rs  prefix.rs  ring.rs  target.rs
crates/xedit-tui/: Cargo.toml
crates/xedit-tui/src/: app.rs  input.rs  main.rs  screen.rs
