[package]
name = "xedit-tui"
description = "Terminal UI for XEDIT"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "xedit"
path = "src/main.rs"

[features]
default = ["rexx"]
rexx = ["xedit-core/rexx"]

[dependencies]
xedit-core = { path = "../xedit-core", default-features = false }
crossterm = "0.28"
ratatui = "0.29"
